Added documentation, improved encryption workflow